--- a/scss/all-blokc/_all-blokc.scss
+++ b/scss/all-blokc/_all-blokc.scss
@@ -1,7 +1,9 @@
 @import 'container';
-@import 'button';
 @import 'header';
-@import 'sitenav';
 @import 'main';
-@import 'hero';
+@import 'sitenav';
+@import 'about';
+@import 'skills';
+@import 'servises';
+@import 'work';
 @import 'footer';
