--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    // height: 100%;
     scroll-behavior: smooth;
     box-sizing :border-box;
 }
@@ -8,13 +8,15 @@ html {
 *::before,
 *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     height: 100%;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
