--- a/scss/all-blokc/_main.scss
+++ b/scss/all-blokc/_main.scss
@@ -1,3 +1,103 @@
+section {
+    padding: 100px;
+}
+
+
 .main {
-    flex-grow: 1;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background: url(../images/bg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
+    &__content {
+        max-width: 800px;
+    }
+
+    & h2 {
+        color: #fff;
+        font-size: 36px;
+        font-weight: 500;
+    }
+
+    & h2 span {
+        font-style: 60px;
+        font-weight: 600;
+    }
+}
+
+.animated-text {
+    height: 70px;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+
+.animated-text h3 {
+    color:crimson;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 70px;
+    letter-spacing: 1px;
+    // margin-bottom: 30px;
+
+}
+
+.animated-text h3:nth-child(1) {
+    animation:text-move 10s infinite;
+}
+
+@keyframes text-move {
+    0%{
+        margin-top: 0;
+    }
+
+    25%{
+        margin-top: -70px;
+    }
+
+    50%{
+        margin-top: -140px;
+    }
+
+    70%{
+        margin-top: -70px;
+    }
+
+    100%{
+        margin-top: 0;
+    }
+}
+
+.btn {
+    color: #fff;
+    background:crimson;
+    font-size: 17px;
+    font-weight: 600;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border-radius: 2px;
+    transition: .5s ease;
+    margin-top: 30px;
+}
+
+.btn:hover {
+    color:#000;
+    background: #fff;
+}
+
+.media-icons {
+    margin-top: 30px;
+}
+
+.media-icons a {
+    color:#fff;
+    font-size: 25px;
+    margin-right: 30px;
 }
