--- a/scss/all-blokc/_main.scss
+++ b/scss/all-blokc/_main.scss
@@ -104,6 +104,8 @@ section {
 
 @media only screen and (max-width:1049px) {
     .main {
+        padding: 80px 20px;
+
         & .content h2 {
           font-size: 25px;
         }
