--- a/scss/all-blokc/_servises.scss
+++ b/scss/all-blokc/_servises.scss
@@ -33,8 +33,8 @@
         transition: transform .5s;
     }
 
-    & .content .card .servises-icon:hover {
-        transform: translateY(-10px);
+    & .content .card:hover .servises-icon {
+        transform: translateY(-15px);
     }
 
     & .content .card .info {
