--- a/css/main.css
+++ b/css/main.css
@@ -540,6 +540,21 @@ section {
   padding: 100px;
 }
 
+.reveal {
+  position: relative;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  opacity: 0;
+  -webkit-transition: all 1.3s ease;
+  transition: all 1.3s ease;
+}
+
+.reveal.active {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
 .main {
   position: relative;
   width: 100%;
@@ -654,6 +669,7 @@ section {
   color: #fff;
   font-size: 25px;
   margin-right: 30px;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 1049px) {
