--- a/scss/all-blokc/_main.scss
+++ b/scss/all-blokc/_main.scss
@@ -2,6 +2,18 @@ section {
     padding: 100px;
 }
 
+.reveal {
+    position: relative;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: all 1.3s ease;
+}
+
+.reveal.active {
+    transform: translateY(0);
+    opacity: 1;
+}
+
 
 .main {
     position: relative;
@@ -43,8 +55,6 @@ section {
     font-weight: 700;
     line-height: 70px;
     letter-spacing: 1px;
-    // margin-bottom: 30px;
-
 }
 
 .animated-text h3:nth-child(1) {
@@ -100,6 +110,7 @@ section {
     color:#fff;
     font-size: 25px;
     margin-right: 30px;
+    text-decoration: none;
 }
 
 @media only screen and (max-width:1049px) {
