--- a/css/main.css
+++ b/css/main.css
@@ -889,6 +889,12 @@ section {
   }
 }
 
+@media only screen and (max-width: 606px) {
+  .about {
+    padding: 100px 20px;
+  }
+}
+
 .button {
   padding: 0;
   margin: 0;
@@ -1012,8 +1018,14 @@ section {
   }
 }
 
+@media only screen and (max-width: 700px) {
+  .skills {
+    padding: 100px 30px;
+  }
+}
+
 .servises {
-  padding: 100px 60px;
+  padding: 100px 30px;
 }
 
 .servises .content {
