--- a/scss/all-blokc/_about.scss
+++ b/scss/all-blokc/_about.scss
@@ -86,6 +86,8 @@
 
 @media only screen and (max-width: 1049px) {
   .about {
+
+
     & .content {
       flex-direction: column;
       width: 100%;
@@ -99,5 +101,12 @@
       & .content .col-righte {
         margin-top: 40px;
       }
+  }
+}
+
+
+@media only screen and (max-width:606px) {
+  .about {
+    padding: 100px 20px;
   }
 }
