--- a/scss/all-blokc/_skills.scss
+++ b/scss/all-blokc/_skills.scss
@@ -97,6 +97,8 @@
 
 @media only screen and (max-width:1049px) {
     .skills{
+        // padding: 100px 30px;
+
         & .content {
             flex-direction: column;
         }
@@ -110,4 +112,10 @@
             margin-top: 40px;
           }
       }
+}
+
+@media only screen and (max-width:700px) {
+    .skills{
+        padding: 100px 30px;
+    }
 }
